src/test/ui/mut/mut-suggestion.stderr
error[E0596]: cannot borrow `arg` as mutable, as it is not declared as mutable
  --> $DIR/mut-suggestion.rs:12:5
   |
LL | fn func(arg: S) {
   |         --- help: consider changing this to be mutable: `mut arg`
...
LL |     arg.mutate();
   |     ^^^^^^^^^^^^ cannot borrow as mutable

error[E0596]: cannot borrow `local` as mutable, as it is not declared as mutable
  --> $DIR/mut-suggestion.rs:20:5
   |
LL |     let local = S;
   |         ----- help: consider changing this to be mutable: `mut local`
...
LL |     local.mutate();
   |     ^^^^^^^^^^^^^^ cannot borrow as mutable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
